fixed infinite loop in search and made search autocomplete visible

--- a/src/components/GeoCoding/Geocoding.css
+++ b/src/components/GeoCoding/Geocoding.css
@@ -1,9 +1,16 @@
 .geocoding {
     display: flex;
-    flex-direction: column;
+    gap: 10px;
 }
 
 .geocoding div {
     display: flex;
     gap: 10px;
+    align-items: center;
+    justify-content: flex-end;
+    height: 2rem;
+}
+
+.geocoding input {
+    height: 20px;
 }
