--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -57,4 +57,5 @@
     cursor: pointer;
     text-align: start;
     margin: 2px 0;
+    color: black;
 }
